src/test/ui/borrowck/mut-borrow-of-mut-ref.stderr
error[E0596]: cannot borrow `b` as mutable, as it is not declared as mutable
  --> $DIR/mut-borrow-of-mut-ref.rs:6:7
   |
LL |     h(&mut b);
   |       ^^^^^^ cannot borrow as mutable
   |
help: consider making the binding mutable
   |
LL | pub fn f(mut b: &mut i32) {
   |          ^^^

error[E0596]: cannot borrow `b` as mutable, as it is not declared as mutable
  --> $DIR/mut-borrow-of-mut-ref.rs:11:12
   |
LL |     h(&mut &mut b);
   |            ^^^^^^ cannot borrow as mutable
   |
help: consider making the binding mutable
   |
LL | pub fn g(mut b: &mut i32) {
   |          ^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0596`.
